--- a/App.css
+++ b/App.css
@@ -4,8 +4,12 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #f7f7f7;
 }
+#job_opening{
+  text-decoration: underline;
+  text-align: center;
+}
 header {
-  background-color: #437FC7;
+  background-color: #e7eaee;
   color: #fff;
   display: flex;
   justify-content: space-between;
@@ -29,18 +33,47 @@ section {
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   border-radius: 10px;
 }
+h2 {
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+ul {
+  margin: 1rem 0;
+  padding-left: 1.5rem;
+}
+
+li {
+  margin-bottom: 0.5rem;
+}
 button {
-  background-color: #6DAFFE;
+  background-color: #17bd2d;
   color: #fff;
   border: none;
   padding: 1rem 2rem;
   font-size: 1.2rem;
   cursor: pointer;
   border-radius: 5px;
+  display: block;
+  margin: 0 auto;
 }
 button:hover {
   background-color: #fff;
   color: #1e90ff;
   border: 2px solid #1e90ff;
   transition: all 0.3s ease;
+}
+footer {
+  text-align: center;
+  margin-top: 3rem;
+  padding: 1rem 0;
+  background-color: #f7f7f7;
+  border-top: 1px solid #ddd;
+}
+
+footer p {
+  font-size: 0.9rem;
+  color: #555;
+  margin: 0;
 }
