header colour change

--- a/App.css
+++ b/App.css
@@ -9,7 +9,7 @@ body {
   text-align: center;
 }
 header {
-  background-color: #e7eaee;
+  background-color: #56db61;
   color: #fff;
   display: flex;
   justify-content: space-between;
